[package]
name = "loshell"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
anyhow = "1"
rodio = { version = "0.21.1", features = ["symphonia-mp3", "symphonia-aac"] }
stream-download = { version = "0.23.0", features = ["reqwest-native-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
libc = "0.2"
