[package]
name = "loshell"
version = "0.3.1"
edition = "2024"
description = "A terminal-native ambient environment for deep focus with lofi radio and pomodoro"
license = "MIT"
repository = "https://github.com/arferreira/loshell"
homepage = "https://github.com/arferreira/loshell"
keywords = ["tui", "lofi", "pomodoro", "focus", "terminal"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "loshell"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
anyhow = "1"
rodio = { version = "0.21.1", features = ["symphonia-mp3", "symphonia-aac"] }
stream-download = { version = "0.23.0", features = ["reqwest-native-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
